# aggregator-bot

./: .gitignore  Dockerfile  LICENSE  README  README.md  bootstrap-dev.sh  bootstrap-run.sh  bootstrap.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  python.yml
client/: app.py  bot.py  file_processor.py  main.py
client/database/: database.py  database_mappings.py
hooks/: pre-commit
